# Systray

./: README.md
Battery/: CMakeLists.txt  main.cpp
Bluetooth/: CMakeLists.txt  main.cpp
Cloudflare Warp/: CMakeLists.txt  main.cpp
Notification Center Tooggle/: CMakeLists.txt  main.cpp
Wifi/: CMakeLists.txt  main.cpp
